2005-04-20  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* TemplateParser.cs: Adding support for Strict/Explicit attributes 
	for @Page/@Control directives as documented at 
	http://msdn.microsoft.com/library/en-us/cpgenref/html/cpconControlDirective.asp.
	First step don't choke on them. Fixing #74671

2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: use Load instead of LoadWithPartialName. That was
	there from the time when Load wasn't working properly. First part of the
	fix to 74500.

2005-04-15  Lluis Sanchez Gual <lluis@novell.com>

	* ControlBuilder.cs: The BindingContainerType property happens
	to exist in 2.0, so I made it public. Added ParentTemplateBuilder,
	which is used to get the binding container that is managing
	the current two-way binding context.
	* TemplateBuilder.cs: Added some methods and an internal class
	to support two-way bindings.
	* CompiledBindableTemplateBuilder.cs: Implemented.
	* IBindableTemplate.cs: This interface inherits from ITemplate.

2005-04-14  Lluis Sanchez Gual <lluis@novell.com>

	* ControlBuilder.cs: Added BindingContainerType property,
	which works like NamingContainerType but takes into account
	template builders with a specific container type (specified
	using the TemplateContainerAttribute.
	* StateManagedCollection.cs: Reimplemented Save/Load view
	state methods. The existing implementation was not correct
	in all cases.

2005-04-08  Lluis Sanchez Gual <lluis@novell.com>

	* DataSourceView.cs: Added null check.

2005-04-07  Lluis Sanchez Gual <lluis@novell.com>

	* TemplateControl.cs:
	* Page.cs: Moved Eval and XPath from Page
	to TemplateControl.
	* StateManagedCollection.cs: Avoid saving null state.

2005-04-01  Lluis Sanchez Gual <lluis@novell.com>

	* DataSourceView.cs: Rethrow exceptions not handled by operation
	callbacks.
	* ITextControl.cs: Removed event.
	* CollectionBuilder.cs: Don't crash when a collection has more
	than one indexer.
